chore: generationId 2 extensionId
